--- a/Proyecto1/Informe Final/Introduccion/introduccion.lyx
+++ b/Proyecto1/Informe Final/Introduccion/introduccion.lyx
@@ -78,7 +78,7 @@ n-Matricula-Historica-1990-2009.pdf
  Este incremento de la población universitaria va acompañado también por
  un crecimiento en la diversidad de las características de los alumnos.
  Estudiantes de diferentes sectores socioeconómicos, regiones y realidades
- tienen también necesidades y potencial académico distinto
+ tienen también necesidades y potencial académico distintos
 \begin_inset CommandInset citation
 LatexCommand cite
 key "Mckenzie2001"
@@ -101,7 +101,7 @@ el enfoque no solo debe estar en la admisión de un amplio abanico de estudiante
 
 \begin_inset CommandInset citation
 LatexCommand cite
-key "successHE"
+key "Power1987"
 
 \end_inset
 
@@ -110,46 +110,36 @@ key "successHE"
 
 \begin_layout Standard
 El desempeño académico de los alumnos constituye un indicador que permite
- aproximarse a la realidad educativa de la universidad y, por ende, para
- evaluar la calidad de la enseñanza.
+ aproximarse a la realidad educativa de la universidad y, por ende, evaluar
+ la calidad de su enseñanza.
  El avance del conocimiento, la fluidez en la transmisión de la información
  y los cambios acelerados de las estructuras sociales también han incidido
  en los progresos alcanzados por los estudios enfocados en el desempeño
  académico en educación superior.
- En ese contexto, centrarse en la calificación del capital humano adquiere
- un valor incalculable y ello se vincula estrechamente con los resultados
- e investigaciones sobre el desempeño académico de los estudiantes universitario
-s
-\begin_inset CommandInset citation
-LatexCommand cite
-key "rendacad"
-
-\end_inset
-
-.
- 
+ Por lo tanto aumentar el desempeño de los estudiantes es el objetivo principal
+ de cualquier institución educativa.
 \end_layout
 
 \begin_layout Standard
-En busca de la excelencia académica la universidad cada vez está más preocupada
- por los procesos formativos de sus estudiantes.
+En busca de la excelencia académica la universidad se ha preocupado por
+ los procesos formativos de sus estudiantes.
  Éstos procesos pueden ser vistos en términos de valor añadido, según el
  cual la calidad de una institución se estimaría por la diferencia entre
  las características de entrada y de salida de los alumnos
 \begin_inset CommandInset citation
 LatexCommand cite
-key "EvalRend2001"
+key "Diaz2001"
 
 \end_inset
 
 .
- La tendencia más habitual de medir el proceso de egreso de un estudiante
- es correlacionar rendimiento con resultados, los cuales pueden ser clasificados
+ La tendencia habitual de medir el proceso de egreso de un estudiante es
+ correlacionar rendimiento con resultados, los cuales pueden ser clasificados
  como inmediatos o diferidos.
  Los diferidos miden la utilidad que proporcionan los estudios para la inserción
  del titulado al mundo laboral, existiendo dificultades en su medición debido
  a lo subjetivo de ésta.
- Mientras que los rendimientos inmediatos son más fáciles de cuantificar,
+ Mientras que los rendimientos inmediatos se cuantifican con mayor facilidad,
  aunque no existe un estándar para su medición, ya que se pueden medir en
  términos del éxito.
  El rendimiento inmediato, entonces, queda relacionado a la superación de
@@ -166,69 +156,103 @@ Conocer los diferentes factores que inciden en el desempeño académico en
  equidad y calidad educativa
 \begin_inset CommandInset citation
 LatexCommand cite
-key "futuni"
+key "Villapalos1998"
 
 \end_inset
 
 .
- Y si estos factores son comunes en grupos de estudiantes estaríamos en
- presencia de patrones, que describirían a los estudiantes y permitirían
+ Si se determinan factores comunes en grupos de estudiantes, estaríamos
+ en presencia de patrones que describirían a los estudiantes y permitirían
  predecir su desempeño.
 \end_layout
 
 \begin_layout Standard
-En el campo de los predictores, se mantiene a la Prueba de Selección Universitar
-ia como el instrumento explicativo del posterior rendimiento del estudiante
- en el primer nivel universitario.
- Es por ésto que la Universidad, al estar inserta en el CRUCH, selecciona
- a sus postulantes mediante la batería de la PSU.
+La Pontifica Universidad Católica de Valparaíso (PUCV), al estar inserta
+ en el Consejo de Rectores de Universidades Chilenas (CRUCH), selecciona
+ a sus postulantes mediante la batería de la Prueba de Selección Universitaria
+ (PSU).
  Contreras (2009) ha cuestionado esta metodología, determinando que el puntaje
  obtenido en la PSU no es el único indicador del rendimiento posterior
 \begin_inset CommandInset citation
 LatexCommand cite
-key "habreluchile"
+key "Contreras2009"
 
 \end_inset
 
 .
- Para la Escuela sería una gran ventaja conocer si existen factores que
- influyen en el desempeño estudiantil, así podría tomar mejores decisiones
- con respecto a los recursos y sus asignaciones para mejorar el proceso
- formativo de sus estudiantes.
+ Para la Escuela de Ingeniería Informática de la PUCV sería una ventaja
+ conocer si existen factores que influyen en el desempeño estudiantil aparte
+ del puntaje PSU, así podría tomar mejores decisiones con respecto a los
+ recursos y sus asignaciones para mejorar el proceso formativo de sus estudiante
+s.
 \end_layout
 
 \begin_layout Standard
-La presente investigación se enmarca en la necesidad anterior, y para conseguir
- ésto se pretende realizar un reconocimiento de patrones, que explicarían
- características comunes de los estudiantes correlacionadas con su desempeño,
- y que permitirían clasificarlos a través de estos rasgos.
- El reconocimiento de patrones se realizará a través de técnicas del Análisis
- Inteligente de Datos, tales como las Redes Neurales y las Máquinas de Soporte
- Vectorial, entre otras.
+Al disponer la PUCV de un registro académico de las asignaturas dictadas
+ en las carreras de la Escuela de Ingeniería Informática y los estudiantes
+ que las han inscrito, permite tener una base de datos con información histórica
+ propicia para realizar un proceso de análisis de datos.
+ Este proceso se apoyaría en las nuevas tecnologías para obtener de manera
+ rápida y precisa conclusiones que permitan el desarrollo de máquinas de
+ aprendizaje.
+ Estas herramientas de la minería de datos permitirían adelantarse a los
+ hechos apoyando la toma de decisiones por parte de la dirección de la Escuela
+ para mejorar sus procesos docentes y asignar los recursos de una manera
+ eficiente.
 \end_layout
 
 \begin_layout Standard
-Primeramente, se describen los objetivos de éste documento, éstos son los
- fines que ésta investigación persigue.
- También se exponen las actividades que serán necesarias para completarla
- y su planificación estimada.
- Posteriormente se contextualiza esta investigación explicando lo que significa
- el desempeño y el rendimiento académico universitario, cómo afecta este
- indicador en la calidad de la educación superior, formas de medición del
- desempeño y del rendimiento de los estudiantes y la importancia de estos
- indicadores para mejorar la calidad de la educación.
- Además de introducir el reconocimiento de patrones, métodos de identificación,
- clasificación, etc.
- Acto seguido, se introduce la metodología del Análisis de Datos, y el aporte
- que significa al reconocimiento de patrones.Todo esto para llegar al Análisis
- Inteligente de Datos, describiendo como un área de la informática como
- la Inteligencia Artificial ha ayudado a realizar el Análisis de Datos de
- una forma automatizada e inteligente.Más adelante se detallan los datos
- que son necesarios para el desarrollo de la investigación, y que serán
- solicitados oportunamente a la Universidad.
- Además de explicar cuales son los resultados que se esperan obtener cuando
- ya culmine esta investigación, para por último enumerar las conclusiones
- de este estudio.
+Esta investigación se basa en la premisa del párrafo anterior para lograr
+ sus objetivos propuestos y apoyar la toma de decisiones de la Dirección.
+ En el presente informe se describe cada una de las etapas necesarias para
+ el desarrollo del trabajo.
+ En la sección 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:objetivos"
+
+\end_inset
+
+ se presentan tanto el objetivo general como los objetivos específicos del
+ proyecto, además de la planificación del trabajo.
+ El marco teórico del proyecto se encuentra descrito en la sección 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:marco"
+
+\end_inset
+
+, consta tanto de los conceptos involucrados (subsección 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sub:Marco-Conceptual"
+
+\end_inset
+
+) como de las investigaciones relacionadas (subsección 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sub:Marco-Referencial"
+
+\end_inset
+
+).
+ El desarrollo del trabajo se encuentra en la sección 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:desarrollo"
+
+\end_inset
+
+, para finalizar con las conclusiones descritas en la sección 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:conclusiones"
+
+\end_inset
+
+.
+ 
 \end_layout
 
 \end_body
