FInal first part
Signed-off-by: Ricardo Bocaz L <rbocazl@gmail.com>

--- a/Proyecto1/Informe Final/Marco Teorico/Marco Teorico.lyx
+++ b/Proyecto1/Informe Final/Marco Teorico/Marco Teorico.lyx
@@ -1387,7 +1387,7 @@ clustering
 \end_layout
 
 \begin_layout Standard
-Esta diferencia tambien se denomina aprendizaje supervisado y no supervisado.
+Esta diferencia también se denomina aprendizaje supervisado y no supervisado.
  Mientras que en la asociación el entrenamiento es del tipo supervisado,
  en el 
 \emph on
