--- a/Proyecto1/Informe Final/Portada/portada.lyx
+++ b/Proyecto1/Informe Final/Portada/portada.lyx
@@ -177,8 +177,7 @@ INGENIERÍA CIVIL INFORMÁTICA
 \begin_inset Newline newline
 \end_inset
 
- PROFESOR GUÍA: MG.
- RODRIGO ALFARO
+ PROFESOR GUÍA: RODRIGO ALFARO
 \begin_inset Newline newline
 \end_inset
 
