--- a/Proyecto1/Informe Final/Resumen/resumen.lyx
+++ b/Proyecto1/Informe Final/Resumen/resumen.lyx
@@ -110,8 +110,8 @@ ones de educación, han llevado a éstas a formularse preguntas sobre qué
 \end_layout
 
 \begin_layout Standard
-En el presente trabajo se espera fabricar esta herramienta mediante la utilizaci
-ón de máquinas de aprendizaje.
+En este proyecto se desarrollará la herramienta antes mencionada mediante
+ la utilización de máquinas de aprendizaje.
  Para lograr ésto se debe realizar un proceso previo de análisis de datos
  apoyado por herramientas informáticas para disminuir los tiempos y aumentar
  la precisión.
